<resources>
    <string name="app_name">Iqra</string>
    <string name="logo">Logo</string>
    <string name="mic">mic</string>
    <string name="tap_on_mic">Tap on the mic and recite a full or partial verse</string>
    <string name="begin_recording">Please begin reciting</string>
    <string name="now_recording">Recording&#8230;</string>
    <!-- &#8230; == ... -->
    <string name="done_recording">Speech recording ended</string>

    <!-- General messages -->
    <string name="getting_match">Getting match</string>
    <string name="something_went_wrong">Sorry, something went wrong</string>
    <string name="server_connection_lost">Sorry, server connection lost</string>
    <string name="cannot_understand">Sorry, we couldn\'t understand you</string>
    <string name="no_matches">No matches were found</string>
    <string name="too_many_results">Too many results; not all shown</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- Recognition listener errors -->
    <string name="error_network_timeout">Network timeout</string>
    <string name="error_network">Network error</string>
    <string name="error_audio">Audio error</string>
    <string name="error_server">No internet connection</string>
    <string name="error_client">Client error</string>
    <string name="error_speech_timeout">Speech timed out</string>
    <string name="error_no_match">No match</string>
    <string name="error_recognizer_busy">Service was busy, please try again</string>
    <string name="error_insufficient_permissions">Insufficient permissions</string>

    <!-- Match results -->
    <string name="chapter_and_verse">%1$d:%2$d</string>
    <string name="one_result_count">1 result:</string>
    <string name="under_limit_result_count">%1$d results:</string>
    <string name="result_count">%1$d results (not all shown):</string>

    <!-- About -->
    <string name="about_title">About this app</string>
    <string name="about_paragraph">Iqra is a free application meant to provide Muslims with a
        resource for locating and referencing pieces of the Quran through speech recognition.
        Please keep its contributors in your prayers.
        \n\nThe logo of this app is designed by Razan Qaoud and the app designs were made by
        Thamjeeth Abdul Gaffoor. Arabic translation was done by Mohammed Fahad.
        \n\nCredit is also due to all of the people who have contributed to the
        projects Alfanous, Tanzil.net, and Android Asynchronous Http Client.
        \n\n<a href="https://iqraapp.com/privacy">Privacy Policy</a></string>

    <!-- Contact -->
    <string name="contact_title">Contact the developer</string>
    <string name="contact_paragraph">Have some feedback or a feature request? Found a bug?
        Interested in reaching the developer? To get in touch, send a message below. Note that the
        "name" and "email" fields only need to be filled in if you would like to be able to receive
        a reply.</string>
    <string name="contact_form_name">Name</string>
    <string name="contact_form_email">Email</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_send">Send</string>
    <string name="no_message_entered">No message entered</string>
    <string name="sending_message">Sending message</string>
    <string name="message_sent">Message sent</string>

    <!-- Permissions -->
    <string name="internet">Internet</string>
    <string name="record_audio">Record Audio</string>
    <string name="missing_permission_title">Missing Permission!</string>
    <string name="missing_permission_explanation">The action you are trying to do requires the
        &quot;%1$s&quot; permission. Please allow this app to access that permission through the
        &quot;applications&quot; section of your device\'s settings.</string>
    <string name="disabled_google_app_title">Disabled Package!</string>
    <string name="disabled_google_app_explanation">In order to use this app, you must have the Google app enabled. Please enable the Google app through the
        &quot;applications&quot; section of your device\'s settings.</string>
    <string name="ok">OK</string>
    <string name="missing_google_app_title">Missing Package!</string>
    <string name="missing_google_app_explanation">In order to use this app, you must have the Google search app installed.</string>
    <string name="download">Download</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_translation">Translation:</string>
    <string name="save">Save</string>

    <!-- Share -->
    <string name="share_with">Share with&#8230;</string>
    <string name="share_subject">Iqra app</string>
    <string name="share_message">Check out this amazing app I\'ve been using called Iqra! Download it here: http://iqraapp.com/download</string>
    <string name="share_instructions">Select all of the items you want to include in the shared message:</string>
    <string name="share_arabic_ayah">Arabic ayah</string>
    <string name="share_translation_ayah">Translated ayah</string>
    <string name="nothing_to_share">You have not selected anything to share</string>
    <string name="ayah_translated">ayah</string>
    <string name="ayah_in_arabic">الآيه</string>

    <!-- Menu bar titles -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_contact">Contact</string>
    <string name="action_share">Share</string>

    <!-- Translations -->
    <string-array name="translation_array">
        <item>(EN) Sahih International</item>
        <item>(EN) A. J. Arberry</item>
        <item>(EN) Muhammad Asad</item>
        <item>(EN) Abdul Majid Daryabadi</item>
        <item>(EN) Dr. Muhammad Taqi-ud-Din al-Hilali and Dr. Muhammad Muhsin Khan</item>
        <item>(EN) Mohammed Marmaduke William Pickthall</item>
        <item>(EN) Professor Shaykh Hasan Al-Fatih Qaribullah</item>
        <item>(EN) Muhammad Sarwar</item>
        <item>(EN) Abdullah Yusuf Ali</item>
        <item>(EN) Sayyid Abul Ala Maududi</item>
        <item>(EN) Mohammad Habib Shakir</item>
        <item>(EN) Transliteration</item>
    </string-array>

    <string-array name="translation_code" translatable="false">
        <item>en-sahih</item>
        <item>en-arberry</item>
        <item>en-asad</item>
        <item>en-daryabadi</item>
        <item>en-hilali</item>
        <item>en-pickthall</item>
        <item>en-qaribullah</item>
        <item>en-sarwar</item>
        <item>en-yusufali</item>
        <item>en-maududi</item>
        <item>en-shakir</item>
        <item>en-transliteration</item>
    </string-array>

</resources>
