<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:orderInCategory="1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info_white_48dp"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_contact"
        android:title="@string/action_contact"
        android:icon="@drawable/ic_forum_white_48dp"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_48dp"
        android:orderInCategory="4"
        app:showAsAction="never" />
</menu>