<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/gradient"></RelativeLayout>

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appTitle"
        android:textSize="26sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:typeface="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_on_mic"
        android:textSize="15sp"
        android:id="@+id/micText"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="185dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/recordCircle"
            android:src="@drawable/record_circle_inactive"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/mic" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/recordButton"
            android:src="@drawable/ic_mic_white_48dp"
            android:background="@null"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:onClick="listen"
            android:contentDescription="@string/mic"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:id="@+id/partialResult"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>